--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ body{
 .head{
     display: flex;
     text-align: start;
+    padding-top: 10px;
+    margin-left: 10px;
+    text-align: center;
+    justify-content: center;
 }
 
 .info{
@@ -22,6 +26,7 @@ body{
 
 .info-left{
     width: 75%;
+    padding-left: 20px;
 }
 
 .skill-head{
@@ -36,6 +41,7 @@ body{
 
 .discord{
     width: 50%;
+    padding-left: 13px;
 }
 
 .info-right{
@@ -59,8 +65,10 @@ body{
 
 h1{
     color:aliceblue;
+    text-align:center;
     margin:0 auto;
     padding-left: 10px;
+    padding-right: 20px;
 }
 
 h2{
@@ -69,5 +77,5 @@ h2{
 
 a{
     color:white;
-    text-decoration: none;
+    /* text-decoration: ; */
 }
