--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 .grid-container {
 	display: grid;
     grid-template-rows: repeat(7,auto);
-	background-color:aqua;
+	background-color:rgb(0, 0, 0);
     /* justify-content:start; */
 	text-align: start;
     grid-gap: 10px;
@@ -20,9 +20,14 @@
     height: 100px; */
 }
 
+a{
+	color: white;
+}
+
 .grid-container > div{
 	display: grid;
     margin: 0 auto;
+	color: white;
 }
 
 #header{
@@ -38,7 +43,7 @@
 	grid-template-columns: repeat(4,auto);
 	border: 5px dotted;
 	border-radius: 10px;
-	border-color: whitesmoke;
+	border-color: rgb(255, 255, 255);
 	/* margin-left: 16px; */
 	width: 100%;
     /* height: 100%; */
